tests/machine/x/cpp/values_builtin.mochi.error
line 6: ../../../tests/machine/x/cpp/values_builtin.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/values_builtin.mochi.cpp:6:18: error: ‘values’ was not declared in this scope
    6 |         (cout << values(m));
      |                  ^~~~~~

  5 | 	auto m = unordered_map<string,int>{{"a", 1}, {"b", 2}, {"c", 3}};
  6 | 	(cout << values(m));
  7 | 	return 0;
