tests/machine/x/cpp/values_builtin.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	auto m = unordered_map<string,int>{{"a", 1}, {"b", 2}, {"c", 3}};
	(cout << values(m));
	return 0;
}
